--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
 
         tg.MainButton.onClick(() => {
             if (cart.length > 0) {
-                const cartData = cart.map(item => ({ id: item.id, name: item.name, quantity: item.quantity, price: item.price }));
+                const cartData = cart.map(item => ({
+                    id: item.id,
+                    name: item.name,
+                    quantity: item.quantity,
+                    price: item.price
+                }));
                 tg.sendData(JSON.stringify({ cart: cartData }));
                 tg.close();
             }
