--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
                 <button onclick="closeModal('admin-modal')" class="w-full mt-6 py-2 bg-red-500 text-white rounded-lg font-semibold">Close</button>
             </div>
         </div>
+        <!-- Cart Modal -->
+        <div id="cart-modal" class="modal fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center hidden" onclick="closeCartModal()">
+            <div class="modal-content w-11/12 md:w-1/2 lg:w-1/3 rounded-lg shadow-lg p-6 bg-white" onclick="event.stopPropagation()">
+                <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
+                <div id="cart-items" class="space-y-2 max-h-64 overflow-auto mb-4"></div>
+                <p id="cart-total" class="text-xl font-semibold mb-4"></p>
+                <div class="flex justify-end gap-2">
+                    <button onclick="closeCartModal()" class="px-4 py-2 rounded-lg border">Close</button>
+                    <button id="checkout-btn" class="px-4 py-2 rounded-lg btn-primary">Checkout</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -82,6 +94,27 @@
 
         tg.MainButton.onClick(() => {
             if (cart.length > 0) {
+                openCartModal();
+            }
+        });
+
+        let allProducts = [], allCategories = [], cart = [], currentProduct = null, currentMediaIndex = 0;
+        const productGrid = document.getElementById('product-grid');
+        const productModal = document.getElementById('product-modal');
+        const adminModal = document.getElementById('admin-modal');
+
+        function openCartModal() {
+            const container = document.getElementById('cart-items');
+            container.innerHTML = '';
+            cart.forEach(item => {
+                const line = document.createElement('div');
+                line.className = 'flex justify-between';
+                line.innerHTML = `<span>${item.name} x${item.quantity}</span><span>$${(item.price * item.quantity).toFixed(2)}</span>`;
+                container.appendChild(line);
+            });
+            const total = cart.reduce((sum, i) => sum + i.price * i.quantity, 0);
+            document.getElementById('cart-total').innerText = `Total: $${total.toFixed(2)}`;
+            document.getElementById('checkout-btn').onclick = () => {
                 const cartData = cart.map(item => ({
                     id: item.id,
                     name: item.name,
@@ -90,13 +123,13 @@
                 }));
                 tg.sendData(JSON.stringify({ cart: cartData }));
                 tg.close();
-            }
-        });
+            };
+            document.getElementById('cart-modal').classList.remove('hidden');
+        }
 
-        let allProducts = [], allCategories = [], cart = [], currentProduct = null, currentMediaIndex = 0;
-        const productGrid = document.getElementById('product-grid');
-        const productModal = document.getElementById('product-modal');
-        const adminModal = document.getElementById('admin-modal');
+        function closeCartModal() {
+            document.getElementById('cart-modal').classList.add('hidden');
+        }
 
         async function loadData() {
             try {
