--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Product Catalog</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
         :root {
             --tg-theme-bg-color: #ffffff;
@@ -178,8 +177,8 @@
                 document.getElementById('pay-usd-amount').innerText = usd;
                 document.getElementById('pay-btc-amount').innerText = btcAmount;
                 document.getElementById('btc-address').innerText = address;
-                document.getElementById('qrcode').innerHTML = '';
-                new QRCode(document.getElementById('qrcode'), address);
+                const qrContainer = document.getElementById('qrcode');
+                qrContainer.innerHTML = `<img src="https://chart.googleapis.com/chart?cht=qr&chs=200x200&chl=${encodeURIComponent(address)}" alt="QR Code" />`;
                 document.getElementById('payment-modal').classList.remove('hidden');
                 // start polling for transaction
                 txInterval = setInterval(pollForTx, 30000);
